<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ToolUpdateFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirmToolUpdate">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvToolUpdateToolName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/newToolName"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfToolUpdateToolName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/enterNewToolName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvToolUpdateToolName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etToolUpdateToolName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvToolUpdateToolType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/newToolType"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tfToolUpdateToolName" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfToolUpdateToolType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/enterNewToolType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvToolUpdateToolType">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etToolUpdateToolType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvToolUpdateToolWidth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/newToolWidth"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tfToolUpdateToolType" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfToolUpdateToolWidth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/enterNewToolWidth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvToolUpdateToolWidth">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etToolUpdateToolWidth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnConfirmToolUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBackToolUpdate"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBackToolUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnConfirmToolUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>

